--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     //Glide Dependency
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    //видео во весь экран
+    implementation 'com.google.android.exoplayer:exoplayer:2.15.1'
 
 
 }
