--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -15,7 +15,18 @@
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.HyperMedia2"
-        tools:targetApi="26">
+        tools:targetApi="26" >
+        <activity
+            android:name=".LoginThings.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.HyperMedia2.NoActionBar" />
+        <activity
+            android:name=".OrganizationOfParentControll.OrganizationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChildModeThings.ForChildModeActivity"
+            android:exported="false" />
         <activity
             android:name=".SplashScreen"
             android:exported="false" />
@@ -26,15 +37,19 @@
             android:resizeableActivity="true"
             android:supportsPictureInPicture="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".Music.MusicService" />
     </application>
